# ssh-menu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  build.rs  config.example.toml
.github/release-notes/: v0.1.0.md  v0.1.1.md  v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.4.1.md  v0.4.2.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  connect.rs  main.rs  ssh_config.rs  tui.rs
src/config/: mod.rs  model.rs  store.rs
src/ssh/: connect.rs  import.rs  mod.rs
src/tui/: app.rs  events.rs  form.rs  mod.rs  runtime.rs  view.rs
