[package]
name = "ssh-menu"
version = "0.4.1"
edition = "2021"
description = "Interactive TUI SSH connection manager"
license = "MIT"
repository = "https://github.com/Aidan-996/ssh-menu"
readme = "README.md"
keywords = ["ssh", "tui", "cli", "terminal", "manager"]
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing", "local-offset", "macros"] }

[target.'cfg(windows)'.build-dependencies]
resvg = "0.43"
ico = "0.4"
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
